# media-creative-assistant

./: .env.example  .gitignore  AI_Native_Video_Editing_Agent_Architecture.md  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/adapters/: resolve_adapter.py
backend/app/api/: assets.py  capabilities.py  chat.py  execute.py  memory.py  music.py  plans.py  tasks.py
backend/app/capability/: discovery.py
backend/app/ir/: exporters.py  renderer.py  schema.py
backend/app/memory/: __init__.py
backend/app/providers/: __init__.py  base.py  qwen.py
backend/app/runtime/: agent.py  chat.py  clip_ops.py  events.py  framing.py  music.py  pipeline.py  planning.py  publish.py  review.py  style.py  tasks.py  understanding.py
backend/app/store/: db.py  hashing.py  models.py
backend/app/tools/: __init__.py  audio.py  editor.py  ir_tools.py  media.py  registry.py  shots.py  vision.py
backend/scripts/: resolve_capability_probe.py  resolve_smoke_test.py
backend/tests/: conftest.py  test_m0.py  test_m1.py  test_m10.py  test_m11.py  test_m12.py  test_m13.py  test_m14.py  test_m15.py  test_m16.py  test_m17.py  test_m18.py  test_m19.py  test_m2.py  test_m20.py  test_m21.py  test_m22.py  test_m23.py  test_m24.py  test_m25.py  test_m26.py  test_m28.py  test_m3.py  test_m6.py  test_m7.py  test_m8.py  test_m9.py
docs/: ai-native-video-editing-agent-requirements.md  backlog.md  mvp-technical-design.md  phase2-roadmap.md  resolve-scripting-api.md  todolist.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
(+10 files in other folders)
