[project]
name = "media-creative-assistant"
version = "0.1.0"
description = "AI Native Video Editing Agent - backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx[socks]>=0.27",
    "openai>=1.50",
    "scenedetect[opencv]>=0.6.4",
    "faster-whisper>=1.0",
    "pillow>=12.3.0",
    "pillow-heif>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
